# esp-idf

./: .gitignore
Dispense3-3/: .project  CMakeLists.txt  reference.txt  sdkconfig.old
Dispense3-3/components/FlashFunc/: CMakeLists.txt  FlashFunc.c
Dispense3-3/components/FlashFunc/include/: FlashFunc.h
Dispense3-3/components/Flow1/: Flow1.c
Dispense3-3/components/Flow2/: CMakeLists.txt  Flow2.c
Dispense3-3/components/Flow2/include/: Flow2.h
Dispense3-3/components/Flow3/: CMakeLists.txt  Flow3.c
Dispense3-3/components/Flow3/include/: Flow3.h
Dispense3-3/components/I2C_PE/: CMakeLists.txt  I2C_PE.c
Dispense3-3/components/I2C_PE/include/: I2C_PE.h
Dispense3-3/components/Setup/: CMakeLists.txt  Setup.c  component.mk
Dispense3-3/components/Setup/include/: Setup.h
Dispense3-3/main/: Main.c
examples/peripherals/i2c/i2c_tools/main/: cmd_i2ctools.c
